--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
     document.getElementById("mensaje-login").textContent = "Has cerrado sesión.";
     document.getElementById("contenido-exclusivo").style.display = "none";
   }
-</script>
+</script src="script.js"></script>
+
 
 </body>
 </html>
